--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,4 +139,12 @@
     <string name="click_to_go_to_app_settings">Click to go to QRAlarm application settings.</string>
     <string name="browser_not_found">Browser not found…</string>
     <string name="optimization_dialog_description">Make QRAlarm work best in your system by checking our optimization guide and sleep assured!</string>
+    <string name="qralarm_pro">QRAlarm PRO</string>
+    <string name="special_alarm_settings">Special alarm settings</string>
+    <string name="early_access_to_new_features">Early access to new features</string>
+    <string name="no_ads_experience">No ads experience</string>
+    <string name="buy_once_enjoy_forever">Buy once - enjoy forever!</string>
+    <string name="get_it_now">Get it now!</string>
+    <string name="not_now">Not now</string>
+    <string name="qralarm_pro_package_name">com.sweak.qralarm.pro</string>
 </resources>
