Now showing an optimization guide dialog if the app detected that the alarm was missed

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -159,4 +159,7 @@
     <string name="do_not_leave_alarm_description">Stale wyświetlaj ekran alarmu, gdy dzwoni.</string>
     <string name="block_volume_down">Blokowanie wyciszania</string>
     <string name="block_volume_down_description">Nie pozwól zmniejszać głośności dzwonka alarmu.</string>
+    <string name="alarm_didnt_ring">Alarm nie zadzwonił? ⏰</string>
+    <string name="alarm_didnt_ring_description">Czy ostatni alarm został pominięty? Jeśli tak, upewnij się, że dokładnie zastosowałeś się do naszego Przewodnika optymalizacyjnego, który ma na celu upewnienie się, że QRAlarm działa najlepiej w Twoim systemie!</string>
+    <string name="optimize_now">Zoptymalizuj teraz!</string>
 </resources>
