--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,4 +150,7 @@
     <string name="do_not_leave_alarm_description">Keep displaying alarm screen when the alarm is ringing.</string>
     <string name="block_volume_down">Block volume down</string>
     <string name="block_volume_down_description">Do not let the volume of the alarm ringtone be decreased.</string>
+    <string name="alarm_didnt_ring">Alarm didn\'t ring? ⏰</string>
+    <string name="alarm_didnt_ring_description">Was the last alarm missed? If so, make sure you\'ve thoroughly followed our Optimization guide that is supposed to make sure that QRAlarm works best in your system!</string>
+    <string name="optimize_now">Optimize now!</string>
 </resources>
