Added the option of skipping the next alarm in repeating alarms

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -163,4 +163,6 @@
     <string name="alarm_didnt_ring_description">Czy ostatni alarm został pominięty? Jeśli tak, upewnij się, że dokładnie zastosowałeś się do naszego Przewodnika optymalizacyjnego, który ma na celu upewnienie się, że QRAlarm działa najlepiej w Twoim systemie!</string>
     <string name="optimize_now">Zoptymalizuj teraz!</string>
     <string name="there_was_an_issue_playing_ringtone">Wystąpił problem z odtworzeniem dzwonka…</string>
+    <string name="skip_next_alarm">Pomiń kolejny alarm</string>
+    <string name="undo_skipping_next_alarm">Cofnij pominięcie kolejnego alarmu</string>
 </resources>
