AlarmCard now shows the day of the next alarm for the repeating alarms

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -165,4 +165,5 @@
     <string name="there_was_an_issue_playing_ringtone">Wystąpił problem z odtworzeniem dzwonka…</string>
     <string name="skip_next_alarm">Pomiń kolejny alarm</string>
     <string name="undo_skipping_next_alarm">Cofnij pominięcie kolejnego alarmu</string>
+    <string name="next_alarm_date">Następny: %1$s</string>
 </resources>
