Fixes #51; When the AlarmActivity is in the direct boot mode the user is requested to first unlock the device to prevent CameraX crash as it is unsuited for work in direct boot

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -168,4 +168,5 @@
     <string name="next_alarm_date">Następny: %1$s</string>
     <string name="alarm_label">Etykieta alarmu</string>
     <string name="enter_your_alarm_label">Wprowadź etykietę alarmu…</string>
+    <string name="unlock_device_to_scan_code">Odblokuj urządzenie by skanować kod!</string>
 </resources>
