--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -170,4 +170,11 @@
     <string name="enter_your_alarm_label">Wprowadź etykietę alarmu…</string>
     <string name="open_code_link">Otwórz link z kodu</string>
     <string name="open_code_link_description">Jeśli kod zawiera prawidłowy URL, aplikacja go otworzy automatycznie po skanowaniu.</string>
+    <string name="do_you_enjoy_qralarm">Do you enjoy QRAlarm? 🚀 ⏰</string>
+    <string name="im_working_hard">Ciężko pracuję, aby Twoje poranki były jak najbardziej bezproblemowe! 🫡</string>
+    <string name="i_love_it_rate_me">Podoba mi się - oceń mnie! ❤️</string>
+    <string name="did_something_go_wrong">Czy coś poszło nie tak?\nMożemy wspólnie to naprawić!</string>
+    <string name="tell_me_what_is_wrong">Powiedz, co jest nie tak</string>
+    <string name="do_not_show_again">Nie pokazuj tego ekranu ponownie.</string>
+    <string name="rate_qralarm">Oceń QRAlarm</string>
 </resources>
