--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -177,4 +177,5 @@
     <string name="tell_me_what_is_wrong">Powiedz, co jest nie tak</string>
     <string name="do_not_show_again">Nie pokazuj tego ekranu ponownie.</string>
     <string name="rate_qralarm">Oceń QRAlarm</string>
+    <string name="previous">Poprzedni</string>
 </resources>
