--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -170,4 +170,5 @@
     <string name="qralarm_github_full_uri" translatable="false">https://github.com/sweakpl/qralarm-android</string>
     <string name="qralarm_github_issues_full_uri" translatable="false">https://github.com/sweakpl/qralarm-android/issues</string>
     <string name="rate_qralarm">Rate QRAlarm</string>
+    <string name="previous">Previous</string>
 </resources>
