--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
     <string name="vibrations">Vibrations</string>
     <string name="use_qr_bar_code">Use QR/Bar code</string>
     <string name="assign_specific_code">Assign specific code</string>
-    <string name="assign_specific_code_description">The alarm can be disabled with any code. Click below to scan your own QR or Bar code to be used to disable this alarm:</string>
+    <string name="assign_specific_code_description">The alarm can be disabled with any code. Click below to assign your own QR or Bar code to be used to disable this alarm:</string>
     <string name="scan_your_own_code">Scan your own code</string>
     <string name="gentle_wake_up">Gentle wake up</string>
     <string name="temporary_mute">Temporary mute</string>
@@ -71,7 +71,7 @@
     <string name="camera_permission_required_description">Camera permission is required for scanning codes. In order to grant the permission go to settings and grant the camera permission manually.</string>
     <string name="settings">Settings</string>
     <string name="cancel">Cancel</string>
-    <string name="code_successfully_scanned">Code has been successfully scanned!</string>
+    <string name="code_successfully_assigned">Code has been successfully assigned!</string>
     <string name="assign_new_code">Assign new code</string>
     <string name="clear_assigned_code">Clear assigned code</string>
     <string name="permissions_required">Permissions required!</string>
@@ -171,4 +171,7 @@
     <string name="qralarm_github_issues_full_uri" translatable="false">https://github.com/sweakpl/qralarm-android/issues</string>
     <string name="rate_qralarm">Rate QRAlarm</string>
     <string name="previous">Previous</string>
+    <string name="scan_code">Scan code</string>
+    <string name="or_use_already_used_code">Or use already used code</string>
+    <string name="click_to_choose">*Click to choose*</string>
 </resources>
