--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,7 +162,7 @@
     <string name="open_code_link">Open code link</string>
     <string name="open_code_link_description">If the code contains a valid URL the app will open it automatically upon scanning.</string>
     <string name="do_you_enjoy_qralarm">Do you enjoy QRAlarm? 🚀 ⏰</string>
-    <string name="im_working_hard">I\'m working hard to make your mornings as smooth as possible! 🫡</string>
+    <string name="im_working_hard">I\'m working hard to make your mornings as smooth as possible! 🙂</string>
     <string name="i_love_it_rate_me">I love it - rate me! ❤️</string>
     <string name="did_something_go_wrong">Did something go wrong?\nWe can work together to fix it!</string>
     <string name="tell_me_what_is_wrong">Tell me what\'s wrong</string>
